# dspaces-perf

./: CMakeLists.txt  LICENSE  README.md
scripts/fast_put/1putrank/: collect_full.sh  collect_times_all.sh  collect_times_avg.sh  collect_times_worst.sh  generate_graphs.py  generate_graphs2.py
scripts/fast_put/multiputrank/: calc_stdev.py  collect_mean_wait.sh  collect_stdev_wait_time.sh  collect_times_worst.sh  generate_graphs.py
scripts/fast_put/run/: job.sh  size_job.sh
src/util/: CMakeLists.txt  common.h  fast_put.c
tests/: CMakeLists.txt  test_script.sh.in
